[tool.poetry]
name = "relora"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
packages = []

[tool.poetry.dependencies]
python = "~3.10"
torch = "^2.0.0"
transformers = "^4.44.2"
tokenizers = "^0.20.0"
datasets = "^2.21.0"
peft = "^0.13.0"
wandb = "^0.17.8"
loguru = "^0.5.0"
matplotlib = "^3.9.2"
pybind11 = "^2.13.6"
bitsandbytes = "^0.44.0"
scipy = "^1.14.1"
evaluate = "^0.4.2"
packaging = "^24.2"
ninja = "^1.11.1"
accelerate = "^0.33.0"
azure-ai-ml = "^1.20.0"
azure-identity = "1.17.1"
nvitop = "^1.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
